phase 4 step 3
